--- a/index.html
+++ b/index.html
@@ -289,7 +289,8 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
 
 </section>
     <a href="#Home" id="back-to-top" title="Back to Top">&uarr;</a>
-  
+   <script src="script.js"></script>
+        
 <!-- Javascript -->
 <script>
     var navLinks = document.getElementById("navLinks");
