--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
             navbar.classList.remove("sticky");
         }
     };
-   
+   <script>
         document.addEventListener("DOMContentLoaded", function() {
             var backToTop = document.getElementById("back-to-top");
 
