--- a/public_html/index.html
+++ b/public_html/index.html
@@ -285,7 +285,8 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
     </div>
     </div>
 
-
+  <a href="#Home" id="back-to-top" title="Back to Top">&uarr;</a>
+        <script src="script.js"></script>
 
 </section>
 <!-- Javascript -->
@@ -321,7 +322,37 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
 
 
 </script>
+<script>
+         var menuBtn = document.getElementById("menuBtn");  
+            var sideNav = document.getElementById("sideNav"); 
+              var menu = document.getElementById("menu"); 
+             sideNav.style.right = "-250px";
+           menuBtn.onclick = function(){
+            if(sideNav.style.right === "-250px"){ 
+                sideNav.style.right = "0";
+                menu.src = "img/close.png";
+            }   
+           else {
+               sideNav.style.right = "-250px";
+                menu.src = "img/menubar.png";
+           }
+       }   
+     ;var scroll = new SmoothScroll('a[href*="#"]', {
+	speed: 500,
+	speedAsDuration: true
+});
+ 
+backToTop.addEventListener("click", function(event) {
+    event.preventDefault();
+    window.scrollTo({
+        top: 0,
+        behavior: "smooth"
+    });
+});
 
+
+
+        </script>
 
 
 
